Add Album Info Component

--- a/example/index.html
+++ b/example/index.html
@@ -25,55 +25,7 @@
     </form>
   </div>
 
-  <div class="list">
-    <div class="list-item">
-      <img src="https://i.scdn.co/image/a13aadb368a956be48fe9089acb64333f0c0ca40" alt="" class="list-image">
-      <div class="list-description">
-        <p class="list-title">Make Yourself</p>
-        <p class="list-subtitle">Incubus</p>
-      </div>
-    </div>
-
-    <div class="list-item">
-      <img src="https://i.scdn.co/image/9a464b23594697b5a339ce3150a6656e1829d447" alt="" class="list-image">
-      <div class="list-description">
-        <p class="list-title">8</p>
-        <p class="list-subtitle">Incubus</p>
-      </div>
-    </div>
-
-    <div class="list-item">
-      <img src="https://i.scdn.co/image/a13aadb368a956be48fe9089acb64333f0c0ca40" alt="" class="list-image">
-      <div class="list-description">
-        <p class="list-title">Make Yourself</p>
-        <p class="list-subtitle">Incubus</p>
-      </div>
-    </div>
-
-    <div class="list-item">
-      <img src="https://i.scdn.co/image/9a464b23594697b5a339ce3150a6656e1829d447" alt="" class="list-image">
-      <div class="list-description">
-        <p class="list-title">8</p>
-        <p class="list-subtitle">Incubus</p>
-      </div>
-    </div>
-
-    <div class="list-item">
-      <img src="https://i.scdn.co/image/a13aadb368a956be48fe9089acb64333f0c0ca40" alt="" class="list-image">
-      <div class="list-description">
-        <p class="list-title">Make Yourself</p>
-        <p class="list-subtitle">Incubus</p>
-      </div>
-    </div>
-
-    <div class="list-item">
-      <img class="list-image" src="https://i.scdn.co/image/9a464b23594697b5a339ce3150a6656e1829d447" alt="">
-      <div class="list-description">
-        <p class="list-title">8</p>
-        <p class="list-subtitle">Incubus</p>
-      </div>
-    </div>
-  </div>
+  <div id="album-list" class="list"></div>
 </aside>
 
 <main class="container">
