Add Album Tracks Component

--- a/example/index.html
+++ b/example/index.html
@@ -30,12 +30,7 @@
 
 <main class="container">
   <div class="container-inner">
-    <div class="album-info">
-      <img class="album-image" src="https://i.scdn.co/image/a13aadb368a956be48fe9089acb64333f0c0ca40" alt="">
-      <p class="album-title">Make Yourself</p>
-      <p class="album-artist">Incubus</p>
-      <p class="album-counter">13 Músicas</p>
-    </div>
+    <div id="album-info" class="album-info"></div>
 
     <div class="album-musics">
       <div class="music active">
